--- a/src/app/sumulas/cadastrar/cadastrar.page.html
+++ b/src/app/sumulas/cadastrar/cadastrar.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Cadastrar Sumula</ion-title>
+    <ion-title>Preencher Sumula</ion-title>
   </ion-toolbar>
 </ion-header>
 
